// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Quoter accuracy & sqrt pricing snapshots (Phase 0, no hooks) ASSET->USDC: quote aligns with execution; snapshots deltas & sqrt 1`] = `
Object {
  "pool": "0x2b961E3959b79326A8e7F64Ef0d2d825707669b5",
  "reserves": Object {
    "asset": "0",
    "usdc": "0",
  },
}
`;

exports[`Quoter accuracy & sqrt pricing snapshots (Phase 0, no hooks) ASSET->USDC: quote aligns with execution; snapshots deltas & sqrt 2`] = `137502`;

exports[`Quoter accuracy & sqrt pricing snapshots (Phase 0, no hooks) ASSET->USDC: quote aligns with execution; snapshots deltas & sqrt 3`] = `
Object {
  "callerBalances": Object {
    "after": Object {
      "a": "99999999998800000000000000",
      "u": "100000000990089207037554083",
    },
    "before": Object {
      "a": "100000001000000000000000000",
      "u": "100000000000000000000000000",
    },
    "delta": Object {
      "a": "0",
      "u": "990089207037554083",
    },
  },
  "direction": "ASSET->USDC",
  "execution": Object {
    "assetOut": "0",
    "sumOut": "990089207037554083",
    "usdcOut": "990089207037554083",
  },
  "gasUsed": "137502",
  "input": Object {
    "amountIn": "1000000000000000000",
    "minOut": "0",
  },
  "label": "A->U",
  "quotes": Object {
    "pool": Object {
      "amountOut": "990099009900990099",
      "extra": Object {
        "0": "990099009900990099",
        "1": "99",
      },
      "sqrtAfter": null,
      "sqrtBefore": "99",
    },
    "quoter": Object {
      "amountOut": "990099009900990099",
      "extra": Object {
        "0": "990099009900990099",
        "1": "99",
        "2": "200000000000000000000",
        "3": "200009900990099009901",
        "4": "99",
      },
      "sqrtAfter": "200000000000000000000",
      "sqrtBefore": "99",
    },
    "routerStatic": "990089207037554083",
  },
  "reserves": Object {
    "after": Object {
      "a": "101001000000000000000",
      "u": "99009910792962445917",
    },
    "before": Object {
      "a": "100000000000000000000",
      "u": "100000000000000000000",
    },
    "delta": Object {
      "a": "0",
      "u": "990089207037554083",
    },
  },
  "sqrtPriceX96": "79228162514264337593543950336",
}
`;

exports[`Quoter accuracy & sqrt pricing snapshots (Phase 0, no hooks) Monotonicity (same block): larger amountIn → >= amountOut ASSET->USDC via quoter 1`] = `
Object {
  "direction": "ASSET->USDC",
  "q025": "249376558603491271",
  "q050": "497512437810945273",
  "q100": "990099009900990099",
}
`;

exports[`Quoter accuracy & sqrt pricing snapshots (Phase 0, no hooks) Monotonicity (same block): larger amountIn → >= amountOut USDC->ASSET via quoter 1`] = `
Object {
  "direction": "USDC->ASSET",
  "q025": "249376558603491271",
  "q050": "497512437810945273",
  "q100": "990099009900990099",
}
`;

exports[`Quoter accuracy & sqrt pricing snapshots (Phase 0, no hooks) Tiny-trade behavior Healthy reserves: tiny input yields non-zero output (A->U) 1`] = `
Object {
  "callerBalances": Object {
    "after": Object {
      "a": "100000000000000000000000010",
      "u": "100000000000000000000000009",
    },
    "before": Object {
      "a": "100000000000000000000000020",
      "u": "100000000000000000000000000",
    },
    "delta": Object {
      "a": "0",
      "u": "9",
    },
  },
  "direction": "ASSET->USDC",
  "execution": Object {
    "assetOut": "0",
    "sumOut": "9",
    "usdcOut": "9",
  },
  "gasUsed": "103010",
  "input": Object {
    "amountIn": "10",
    "minOut": "0",
  },
  "label": "tiny — A->U",
  "quotes": Object {
    "pool": Object {
      "amountOut": "9",
      "extra": Object {
        "0": "9",
        "1": "0",
      },
      "sqrtAfter": null,
      "sqrtBefore": "0",
    },
    "quoter": Object {
      "amountOut": "9",
      "extra": Object {
        "0": "9",
        "1": "0",
        "2": "200000000000000000000",
        "3": "200000000000000000001",
        "4": "0",
      },
      "sqrtAfter": "200000000000000000000",
      "sqrtBefore": "0",
    },
    "routerStatic": "9",
  },
  "reserves": Object {
    "after": Object {
      "a": "100000000000000000010",
      "u": "99999999999999999991",
    },
    "before": Object {
      "a": "100000000000000000000",
      "u": "100000000000000000000",
    },
    "delta": Object {
      "a": "0",
      "u": "9",
    },
  },
  "sqrtPriceX96": "79228162514264337593543950336",
}
`;

exports[`Quoter accuracy & sqrt pricing snapshots (Phase 0, no hooks) Tiny-trade behavior Healthy reserves: tiny input yields non-zero output (U->A) 1`] = `
Object {
  "callerBalances": Object {
    "after": Object {
      "a": "100000000000000000000000009",
      "u": "100000000000000000000000010",
    },
    "before": Object {
      "a": "100000000000000000000000000",
      "u": "100000000000000000000000020",
    },
    "delta": Object {
      "a": "9",
      "u": "0",
    },
  },
  "direction": "USDC->ASSET",
  "execution": Object {
    "assetOut": "9",
    "sumOut": "9",
    "usdcOut": "0",
  },
  "gasUsed": "103059",
  "input": Object {
    "amountIn": "10",
    "minOut": "0",
  },
  "label": "tiny — U->A",
  "quotes": Object {
    "pool": Object {
      "amountOut": "9",
      "extra": Object {
        "0": "9",
        "1": "0",
      },
      "sqrtAfter": null,
      "sqrtBefore": "0",
    },
    "quoter": Object {
      "amountOut": "9",
      "extra": Object {
        "0": "9",
        "1": "0",
        "2": "200000000000000000000",
        "3": "200000000000000000001",
        "4": "0",
      },
      "sqrtAfter": "200000000000000000000",
      "sqrtBefore": "0",
    },
    "routerStatic": "9",
  },
  "reserves": Object {
    "after": Object {
      "a": "99999999999999999991",
      "u": "100000000000000000010",
    },
    "before": Object {
      "a": "100000000000000000000",
      "u": "100000000000000000000",
    },
    "delta": Object {
      "a": "9",
      "u": "0",
    },
  },
  "sqrtPriceX96": "79228162514264337593543950336",
}
`;

exports[`Quoter accuracy & sqrt pricing snapshots (Phase 0, no hooks) USDC->ASSET: quote aligns with execution; snapshots deltas & sqrt 1`] = `
Object {
  "pool": "0xb4dC171C0edEc8C0032cd0f2d30921c09FA35e34",
  "reserves": Object {
    "asset": "0",
    "usdc": "0",
  },
}
`;

exports[`Quoter accuracy & sqrt pricing snapshots (Phase 0, no hooks) USDC->ASSET: quote aligns with execution; snapshots deltas & sqrt 2`] = `137528`;

exports[`Quoter accuracy & sqrt pricing snapshots (Phase 0, no hooks) USDC->ASSET: quote aligns with execution; snapshots deltas & sqrt 3`] = `
Object {
  "callerBalances": Object {
    "after": Object {
      "a": "100000000990089207037554083",
      "u": "99999999998800000000000000",
    },
    "before": Object {
      "a": "100000000000000000000000000",
      "u": "100000001000000000000000000",
    },
    "delta": Object {
      "a": "990089207037554083",
      "u": "0",
    },
  },
  "direction": "USDC->ASSET",
  "execution": Object {
    "assetOut": "990089207037554083",
    "sumOut": "990089207037554083",
    "usdcOut": "0",
  },
  "gasUsed": "137528",
  "input": Object {
    "amountIn": "1000000000000000000",
    "minOut": "0",
  },
  "label": "U->A",
  "quotes": Object {
    "pool": Object {
      "amountOut": "990099009900990099",
      "extra": Object {
        "0": "990099009900990099",
        "1": "99",
      },
      "sqrtAfter": null,
      "sqrtBefore": "99",
    },
    "quoter": Object {
      "amountOut": "990099009900990099",
      "extra": Object {
        "0": "990099009900990099",
        "1": "99",
        "2": "200000000000000000000",
        "3": "200009900990099009901",
        "4": "99",
      },
      "sqrtAfter": "200000000000000000000",
      "sqrtBefore": "99",
    },
    "routerStatic": "990089207037554083",
  },
  "reserves": Object {
    "after": Object {
      "a": "99009910792962445917",
      "u": "101001000000000000000",
    },
    "before": Object {
      "a": "100000000000000000000",
      "u": "100000000000000000000",
    },
    "delta": Object {
      "a": "990089207037554083",
      "u": "0",
    },
  },
  "sqrtPriceX96": "79228162514264337593543950336",
}
`;
